--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@ $("#uploadFile").change(function() {
         <div class="value" id="similarity1"></div>
         <div class="value" id="similarity2"></div>
         <div class="value" id="similarity3"></div>
+        <div class="value" id="similarity4"></div>
     </div>
 </body>
 </html>
